# tob

./: .gitignore  README.md  pyproject.toml
src/: cli.py  runner.py
src/backtest/: __init__.py  engine.py
src/config/: defaults.yaml  settings.py
src/data/: btc_state.py  collector.py  universe.py
src/exchange/: base.py  binance_futures.py  precision.py  rate_limit.py
src/execution/: paper.py  real.py
src/gui/: __init__.py  app.py
src/market/: clusters.py  quality.py  regime.py
src/observability/: logging.py  metrics.py  report.py
src/risk/: adaptive.py  rules.py  sizing.py  stops.py
src/storage/: repo.py  schema.py
src/strategy/: base.py  breakout_donchian.py  ensemble.py  indicators.py  mean_reversion_bb.py  scoring.py  trend_ema.py
tests/: test_cluster_risk.py  test_ensemble.py  test_indicators.py  test_paper_execution.py  test_regime_quality.py  test_risk_adaptive.py  test_run_live.py  test_scoring_pruning.py  test_strategies.py  test_universe.py
